Ignore main and develop branchs

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,9 @@ name: Build and test solution
 
 on:
   push:
-    branches: [ "!main", "!develop" ]
+    branches-ignore:
+      - main
+      - develop
 
 jobs:
   build:
