--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
       run: dotnet build --no-restore --configuration Release
       
     - name: Test
-      run: dotnet test --no-build --verbosity normal /p:CollectCoverage=true --collect:"XPlat Code Coverage"
+      run: dotnet test --configuration Release --no-build --verbosity normal /p:CollectCoverage=true --collect:"XPlat Code Coverage"
 
     - name: Create NuGet Packages
       run: dotnet pack -c Release
