--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,4 +29,4 @@ jobs:
       run: dotnet pack -c Release
 
     - name: Publish NuGet Packages
-      run: nuget push **/*.nupkg --api-key ${{ secrets.DOTLAND_PACKAGES_KEY }} --source https://api.nuget.org/v3/index.json --no-symbols true -SkipDuplicate
+      run: nuget push **/*.nupkg -ApiKey ${{ secrets.DOTLAND_PACKAGES_KEY }} --source https://api.nuget.org/v3/index.json -NoSymbols true -SkipDuplicate
