--- a/src/Dotland.Collections.Abstractions/Dotland.Collections.Abstractions.csproj
+++ b/src/Dotland.Collections.Abstractions/Dotland.Collections.Abstractions.csproj
@@ -10,10 +10,14 @@
 	<PropertyGroup>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<PackageId>Dotland.Collections.Abstractions</PackageId>
-		<Version>1.0.0</Version>
+		<Version>1.0.1</Version>
 		<Authors>Hamza SAII</Authors>
 		<Company>DOTLAND</Company>
 		<Product>Dotland.Collections.Abstractions</Product>
 		<Copyright>DOTLAND 2023</Copyright>
 	</PropertyGroup>
+
+	<ItemGroup>
+		<None Include="README.md" Pack="true" PackagePath="\"/>
+	</ItemGroup>
 </Project>
