--- a/src/Dotland.Http.Abstractions/Dotland.Http.Abstractions.csproj
+++ b/src/Dotland.Http.Abstractions/Dotland.Http.Abstractions.csproj
@@ -9,10 +9,14 @@
 	<!-- Package specification -->
 	<PropertyGroup>
 		<PackageId>Dotland.Http.Abstractions</PackageId>
-		<Version>1.0.0</Version>
+		<Version>1.0.1</Version>
 		<Authors>Hamza SAII</Authors>
 		<Company>DOTLAND</Company>
 		<Product>Dotland.Http.Abstractions</Product>
 		<Copyright>DOTLAND 2023</Copyright>
 	</PropertyGroup>
+
+	<ItemGroup>
+		<None Include="README.md" Pack="true" PackagePath="\"/>
+	</ItemGroup>
 </Project>
