--- a/src/Dotland.Collections.Abstractions/Dotland.Collections.Abstractions.csproj
+++ b/src/Dotland.Collections.Abstractions/Dotland.Collections.Abstractions.csproj
@@ -18,6 +18,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<None Include="README.md" Pack="true" PackagePath="\"/>
+		<None Include="README.md" Pack="true" PackagePath="\" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Exceptions\" />
 	</ItemGroup>
 </Project>
