--- a/src/Dotland.Http/Dotland.Http.csproj
+++ b/src/Dotland.Http/Dotland.Http.csproj
@@ -1,18 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-	<PropertyGroup>
-		<TargetFrameworks>net6.0;net7.0</TargetFrameworks>
-		<ImplicitUsings>enable</ImplicitUsings>
-		<Nullable>enable</Nullable>
-	</PropertyGroup>
+  <PropertyGroup>
+    <TargetFramework>net7.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+  </PropertyGroup>
 
 	<!-- Package specification -->
 	<PropertyGroup>
-		<PackageId>Dotland.Http.Abstractions</PackageId>
-		<Version>1.0.2</Version>
+		<PackageId>Dotland.Http</PackageId>
+		<Version>1.0.0</Version>
 		<Authors>Hamza SAII</Authors>
 		<Company>DOTLAND</Company>
-		<Product>Dotland.Http.Abstractions</Product>
+		<Product>Dotland.Http</Product>
 		<Copyright>DOTLAND 2023</Copyright>
 	</PropertyGroup>
 
@@ -22,9 +22,10 @@
 
 	<ItemGroup>
 	  <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+	  <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\Dotland.Attributes\Dotland.Attributes.csproj" />
+	  <ProjectReference Include="..\Dotland.Http.Abstractions\Dotland.Http.Abstractions.csproj" />
 	</ItemGroup>
 </Project>
