--- a/src/Dotland.Attributes/Dotland.Attributes.csproj
+++ b/src/Dotland.Attributes/Dotland.Attributes.csproj
@@ -17,7 +17,9 @@
 		<PackageTags>DOTLAND;Attributes;Common</PackageTags>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
-		<Version>1.0.1</Version>
+		<Version>1.0.3</Version>
+		<Authors>Hamza SAII</Authors>
+		<IncludeSymbols>True</IncludeSymbols>
 	</PropertyGroup>
 
 	<ItemGroup>
