--- a/src/Dotland.Http/Dotland.Http.csproj
+++ b/src/Dotland.Http/Dotland.Http.csproj
@@ -9,11 +9,21 @@
 	<!-- Package specification -->
 	<PropertyGroup>
 		<PackageId>Dotland.Http</PackageId>
-		<Version>1.0.0</Version>
+		<Version>1.0.3</Version>
 		<Authors>Hamza SAII</Authors>
 		<Company>DOTLAND</Company>
 		<Product>Dotland.Http</Product>
 		<Copyright>DOTLAND 2023</Copyright>
+		<Title>Dotland.Http</Title>
+		<PackageProjectUrl>https://github.com/DotLand-Inc/Dotland.Libraries</PackageProjectUrl>
+		<PackageIcon>logo.png</PackageIcon>
+		<PackageReadmeFile>Readme.md</PackageReadmeFile>
+		<RepositoryUrl>https://github.com/DotLand-Inc/Dotland.Libraries</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
+		<PackageTags>DOTLAND</PackageTags>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
+		<IncludeSymbols>True</IncludeSymbols>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -22,6 +32,23 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\Dotland.Attributes\Dotland.Attributes.csproj" />
 	  <ProjectReference Include="..\Dotland.Extensions.Abstractions\Dotland.Extensions.Abstractions.csproj" />
+	  <ProjectReference Include="..\Dotland.Http.Abstractions\Dotland.Http.Abstractions.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<FrameworkReference Include="Microsoft.AspNetCore.App" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Include="..\..\docs\Dotland.Http\Readme.md">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
+	  <None Include="..\..\resources\logo.png">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
 	</ItemGroup>
 </Project>
