--- a/.github/workflows/merge-request.yml
+++ b/.github/workflows/merge-request.yml
@@ -62,4 +62,4 @@ jobs:
           .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.token="${{ secrets.SONAR_TOKEN }}"  
 
       - name: Test
-        run: dotnet test --no-build --verbosity normal /p:CollectCoverage=true --collect:"XPlat Code Coverage"
+        run: dotnet test -c Release /p:CollectCoverage=true --collect:"XPlat Code Coverage"
